# modorganizer-installer_ncc

./: CMakeLists.txt  appveyor.yml
boss_dummy/: BossDummy.pro  CMakeLists.txt  SConscript  bossdummy.cpp  bossdummy.h
src/: CMakeLists.txt  SConscript  installerNCC.pro  installer_ncc_en.ts  installerncc.cpp  installerncc.h  nccinstalldialog.cpp  nccinstalldialog.h  nccinstalldialog.ui
